fix idea warnings